Fri Dec  2 10:26:33 2005  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Notify/XML_Topology_Factory.h: Added 'extern'
	  declaration in here as this seems to placate the VC8 compiler's
	  errors.

Fri Dec  2 11:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/SSLIOP/params_dup.h:
          Added missing include of ace/pre.h

Fri Dec  2 11:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1627_Regression/test.mpc:
        * tests/Bug_1551_Regression/test.mpc:
        * tests/Bug_1482_Regression/test.mpc:
        * tests/Bug_1627_Regression/Bug_1627_Regression.mpc:
        * tests/Bug_1551_Regression/Bug_1551_Regression.mpc:
        * tests/Bug_1482_Regression/Bug_1482_Regression.mpc:
          Renamed test.mpc to a more specific name to fix duplicate errors
          in the MPC generation

Fri Dec  2 11:05:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/constants.idl:
          Added several wstring constants for test

Fri Dec  2 01:35:31 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Makefile.am:
	* orbsvcs/orbsvcs/SSLIOP/params_dup.c:
	* orbsvcs/orbsvcs/SSLIOP/params_dup.cpp:

	  Reintroduced `params_dup.c' and removed `params_dup.cpp' file.
	  Some C++ compiler/platform combinations cannot handle the broken
	  OpenSSL function pointer conversions.  Stick with a C compiler.

	* orbsvcs/orbsvcs/SSLIOP/params_dup.h:

	  Include the new "ace/config-macros.h" header instead of
	  "ace/config-lite.h".  The former can be parsed by C compilers.

	* tao/TAO_Singleton_Manager.cpp:
	* tao/TAO_Singleton_Manager.h:

	  Moved static "instance_" pointer to an anonymous namespace
	  within the implementation file.  Allows the friend declaration
	  to be removed, in turn fixing builds that cannot handle the
	  global scope qualifier prepended to that friend declaration.

	  Removed unused "preallocated_object" static array.
